k8s/manifests/playzuno-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playzuno-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playzuno-demo
  template:
    metadata:
      labels:
        app: playzuno-demo
    spec:
      containers:
        - name: playzuno-demo
          image: harbor.apps.estreetz.com/playzuno/playzuno-demo:ba5cc051a12e92fa141375138e8e496f65c778d7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: harbor-secret
