k8s/manifests/playzuno-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playzuno-demo-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik    
    traefik.ingress.kubernetes.io/router.entrypoints: websecure   
spec:
  rules:
    - host: playzuno-demo.apps.estreetz.com      
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: playzuno-demo
                port:
                  number: 80
  - hosts:
        - "*.apps.estreetz.com"
        - apps.estreetz.com
      secretName: apps-estreetz-com-wildcard-tls
